[gd_scene load_steps=7 format=3 uid="uid://1xmibgjejrg2"]

[ext_resource type="Script" path="res://game/minigames/safe_minigame/safe_minigame.gd" id="1_7jlhd"]
[ext_resource type="Texture2D" uid="uid://cm4kdfqpvivid" path="res://assets/objects/table.png" id="1_fc4vh"]
[ext_resource type="Texture2D" uid="uid://ck6hns3slgt5e" path="res://assets/wall.png" id="1_w7vad"]
[ext_resource type="Texture2D" uid="uid://cq6nrg6h5sc3r" path="res://assets/objects/safe_closed.png" id="3_y8eqb"]
[ext_resource type="FontFile" uid="uid://ccc1kwjkhbo8j" path="res://assets/fonts/Prata v1.5.ttf" id="5_x0dvy"]
[ext_resource type="Theme" uid="uid://bg721ml30kggd" path="res://assets/themes/hint_label_theme.tres" id="6_7g2gv"]

[node name="SafeMinigame" type="CanvasLayer"]
script = ExtResource("1_7jlhd")

[node name="Wall" type="TextureRect" parent="."]
offset_left = -93.0
offset_top = -65.0
offset_right = -3.0
offset_bottom = 7.0
scale = Vector2(10, 10)
texture = ExtResource("1_w7vad")
stretch_mode = 1

[node name="Table" type="TextureRect" parent="."]
offset_top = 160.0
offset_right = 678.0
offset_bottom = 733.0
texture = ExtResource("1_fc4vh")
stretch_mode = 4

[node name="Safe" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.5
offset_top = -172.5
offset_right = 165.5
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_y8eqb")
stretch_mode = 4

[node name="HBoxContainer" type="VBoxContainer" parent="."]
offset_left = 285.0
offset_top = 161.0
offset_right = 360.0
offset_bottom = 240.0
theme_override_constants/separation = -1

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Button1" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_x0dvy")
theme_override_font_sizes/font_size = 20
text = "1"
flat = true

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_x0dvy")
theme_override_font_sizes/font_size = 20
text = "2"
flat = true

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_x0dvy")
theme_override_font_sizes/font_size = 20
text = "3"
flat = true

[node name="VBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Button4" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_x0dvy")
theme_override_font_sizes/font_size = 20
text = "4"
flat = true

[node name="Button5" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_x0dvy")
theme_override_font_sizes/font_size = 20
text = "5"
flat = true

[node name="Button6" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_x0dvy")
theme_override_font_sizes/font_size = 20
text = "6"
flat = true

[node name="VBoxContainer3" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Button7" type="Button" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_x0dvy")
theme_override_font_sizes/font_size = 20
text = "7"
flat = true

[node name="Button8" type="Button" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_x0dvy")
theme_override_font_sizes/font_size = 20
text = "8"
flat = true

[node name="Button9" type="Button" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_x0dvy")
theme_override_font_sizes/font_size = 20
text = "9"
flat = true

[node name="Code" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -69.0
offset_right = 125.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_7g2gv")
theme_override_font_sizes/font_size = 48

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/Button9" to="." method="_on_button_9_pressed"]
